--- a/pypro/base/templates/base/home.html
+++ b/pypro/base/templates/base/home.html
@@ -1,100 +1,72 @@
+{% extends 'base/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Python Pro</title>
+{% block title %}Python Pro - Home{% endblock title %}
+{% block body %}
 
-    <meta name="description" content="Página do curso Python Pro">
-    <meta name="author" content="Bruno Santana">
-
-    <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-
-  	<script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/scripts.js' %}"></script>
-
-  </head>
-  <body>
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{% url "base:home" %}">Python Pro</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-      </ul>
-
-    </div>
-  </div>
-  </nav>
     <div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="jumbotron">
-				<h2>
-					Curso de Python com Luciano Ramalho
-				</h2>
-				<p>
-                    Confira em breve mais informações sobre o curso do autor do livro
-                    <a href="https://www.oreilly.com/library/view/fluent-python/9781491946237/" target="_blank">Python Fluente</a>
-				</p>
-				
-			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-12">
-			<div class="card">
-				<h5 class="card-header">
-					Mais informações sobre o instrutor
-				</h5>
-				<div class="card-body">
-					<p class="card-text">
-						<img src="{% static 'img/luciano_ramalho.jpeg' %}" alt="Foto de Luciano Ramalho" class="img-thumbnail float-left mr-3">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                        mollit anim id est laborum.
-					</p>
-				</div>
-				
-			</div>
-		</div>
-	</div>
-</div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="jumbotron">
+                    <h2>
+                        Curso de Python com Luciano Ramalho
+                    </h2>
+                    <script src="https://www.mercadopago.com.br/integrations/v1/web-payment-checkout.js"
+                            data-preference-id="208499078-f3c653c2-9c22-4f21-ab9b-364bdcf4fae7">
+                    </script>
 
-  <footer class="main-footer mt-5 pt-4 text-light">
-      <div class="container">
-          <div class="row">
-              <div class="col">
-                <h3>Entre em contato</h3>
-                  <address>
-                      +55 21 99999-9999
-                      <br>
-                      <a href="mailto:ramalho@python.pro.br" class="text-light">ramalho@python.pro.br</a>
-                  </address>
-              </div>
-          </div>
-      </div>
-      <div class="rights pb-4">
-      <div class="container">
-          <div class="row">
-              <div class="col">
-                {% now 'Y' %} Python Pro. Todos os direitos reservados.
-              </div>
-          </div>
-      </div>
-      </div>
-  </footer>
-  </body>
-</html>
+                    <iframe src="https://player.vimeo.com/video/496703582" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+
+                    {#                <h4 class="mt-4">Entre na fila de espera.</h4>#}
+                    {#                <form action="https://python.us7.list-manage.com/subscribe/post?u=f703705a2e5a647804cdffb2a&amp;id=9eb2b5a687" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate class="form-row align-items-center">#}
+                    {#                  <div class="form-row align-items-center">#}
+                    {#                    <div class="col-auto">#}
+                    {#                      <label class="sr-only" for="mce-EMAILmce-EMAIL">Email</label>#}
+                    {#                      <input type="email" value="" name="EMAIL" class="form-control required" id="mce-EMAIL" placeholder="exemplo@email.com">#}
+                    {#                    </div>#}
+                    {##}
+                    {#                    <div class="col-auto">#}
+                    {#                      <label class="sr-only" for="mce-FNAME">FName</label>#}
+                    {#                      <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="Seu Nome">#}
+                    {#                    </div>#}
+                    {##}
+                    {#                      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->#}
+                    {#                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_f703705a2e5a647804cdffb2a_9eb2b5a687" tabindex="-1" value=""></div>#}
+                    {#                    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"></div>#}
+                    {#                    </div>#}
+                    {##}
+                    {#                    <div class="col-auto">#}
+                    {##}
+                    {#                    </div>#}
+                    {#                  </div>#}
+                    {#                </form>#}
+
+
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <h5 class="card-header">
+                            Mais informações sobre o instrutor
+                        </h5>
+                        <div class="card-body">
+                            <p class="card-text">
+                                <img src="{% static 'img/luciano_ramalho.jpeg' %}" alt="Foto de Luciano Ramalho" class="img-thumbnail float-left mr-3">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                                mollit anim id est laborum.
+                            </p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+{% endblock body %}
