--- a/pypro/aperitivos/templates/aperitivos/indice.html
+++ b/pypro/aperitivos/templates/aperitivos/indice.html
@@ -13,7 +13,7 @@
                 <h1 class="mt-4 mb-3">Lista de Vídeos Aperitivos</h1>
                 <ol>
                     {% for video in videos %}
-                        <li>{{ video.titulo }}</li>
+                        <li><a href="{{ video.get_absolute_url }}">{{ video.titulo }}</a></li>
                     {% empty %}
                         <li>Não foi encontrado nenhum vídeo</li>
                     {% endfor %}
