--- a/pypro/base/templates/base/base.html
+++ b/pypro/base/templates/base/base.html
@@ -39,29 +39,7 @@
 
 {% block body %}{% endblock body %}
 
+{% include 'base/footer.html' with contato_email='ramalho@python.pro.br' only %}
 
-<footer class="main-footer mt-5 pt-4 text-light">
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h3>Entre em contato</h3>
-                <address>
-                    +55 21 99999-9999
-                    <br>
-                    <a href="mailto:ramalho@python.pro.br" class="text-light">ramalho@python.pro.br</a>
-                </address>
-            </div>
-        </div>
-    </div>
-    <div class="rights pb-4">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    {% now 'Y' %} Python Pro. Todos os direitos reservados.
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
 </body>
 </html>
